--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "git-test",
   "version": "1.0.0",
-  "description": "My git test",
+  "description": "This is git-test",
   "main": "index.html",
   "dependencies": {},
   "devDependencies": {},
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://rockykev:nDe52GWGAAgOh83Ngo3h@github.com/RockyKev/git-test.git"
+    "url": "git+https://github.com/RockyKev/git-test.git"
   },
   "keywords": [
     "test"
